# serializer version: 1
# name: test_groups_and_users
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_groups_and_users.1
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users.2
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'zclark',
    'id': 2,
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users[job]
  dict({
    'acquired': True,
    'args': dict({
      'it': 4111,
      'movie': 816,
      'outside': 2622,
      'responsibility': 5851,
      'two': 'lxKJTbTDOKidKxUVFacq',
      'we': 'DaMrcomXsosXGGLuvHak',
      'whose': 3080,
    }),
    'created_at': datetime,
    'id': 'bf1b993c',
    'ping': dict({
      'pinged_at': datetime,
    }),
    'progress': 100,
    'retries': 0,
    'stage': 'LUHtBkEahrPLrGciZpuC',
    'state': <JobState.COMPLETE: 'complete'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'RgaXvaaNYJFjFkpJjyVG',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': 'bVPgnHQHfiScknqtDSSX',
        'step_name': 'RgaXvaaNYJFjFkpJjyVG',
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 100,
        'stage': 'LUHtBkEahrPLrGciZpuC',
        'state': <JobState.COMPLETE: 'complete'>,
        'step_description': 'pymcjBdurvfVyRYryKwp',
        'step_name': 'LUHtBkEahrPLrGciZpuC',
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_jobs[job]
  dict({
    'acquired': True,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': datetime,
    'id': 'bf1b993c',
    'ping': dict({
      'pinged_at': datetime,
    }),
    'progress': 3,
    'retries': 0,
    'stage': None,
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'pathoscope_bowtie',
  })
# ---
# name: test_subtractions
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 'fb085f7f',
        'type': 'fasta',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/fb085f7f/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 'fb085f7f',
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 'fb085f7f',
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 'bf1b993c',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_datetime',
      'id': 1,
      'name': 'foobar.fq.gz',
      'name_on_disk': 'uuid-foobar.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_datetime',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload[reserved]]
  dict({
    'created_at': datetime,
    'id': 3,
    'name': 'test.fq.gz',
    'name_on_disk': str,
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': True,
    'size': 723988,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload[subtraction]]
  dict({
    'created_at': datetime,
    'id': 2,
    'name': 'test.fq.gz',
    'name_on_disk': str,
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 723988,
    'type': 'subtraction',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload]
  dict({
    'created_at': datetime,
    'id': 1,
    'name': 'test.fq.gz',
    'name_on_disk': str,
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 723988,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
